Updated smallStyle, changed contact page

--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,9 @@
   <a href="contact.html">Contact Me</a>
 </nav>
 <div id="contactBody">
-  <h2>Email</h2>
-  <div id="email">grbmolly@gmail.com</div>
-  <h2>Follow me on Twitter</h2>
-  <div id="twitter"><a href="https://twitter.com/MollyGrab">@MollyGrab</a></div>
+  <h2><a href="mailto:grbmolly@gmail.com">Send me an email</a></h2>
+  <h2><a href="https://twitter.com/MollyGrab">Follow me on Twitter</a></h2>
+
 </div>
 </div>
 </body>
