--- a/writing.html
+++ b/writing.html
@@ -26,9 +26,9 @@
   <p><a href="http://quotinghappiness.com/">Quoting Happiness</a> is a blog that I designed for a Communications class at St. Joe's. The purpose of the blog is to curate inspirational or "happy" quotes to readers as well as provide my own reflections on how such sentiments can be implemented into their everyday lives.
   <h2>Writing Samples</h2>
   <ul>
-    <li> <a href="https://medium.com/@mollygrab/norms-breaching-on-social-media-b39516126af8">"Norms Breaching on Social Media"</a>: an exploration of what occurs when one deviates from typical Facebook behavior.</li>
-    <li></li>
-    <li></li>
+    <li> <a href="https://medium.com/@mollygrab/norms-breaching-on-social-media-b39516126af8">"Norms Breaching on Social Media"</a>-- an exploration of what occurs when one deviates from typical Facebook behavior.</li>
+    <li> <a href="https://medium.com/@mollygrab/universities-want-to-be-your-friend-2ba0844a8a51">"Universities Want to be Your 'Friend': Students' Right to Privacy on Social Media"</a>-- an ethical discussion of universities' infringement of Fourth Amendment rights. </li>
+    <li> <a href="https://medium.com/@mollygrab/comics-in-the-classroom-432bac017b49">"Comics in the Classroom: Why Teachers of History Should Embrace the Graphic Novel"</a>-- an exploration of the value of graphic novels in modern education. </li>
   </ul>
 </div>
 </div>
