--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 	    <br>Graduation: June 2013</p>
 </div>
 
-<div id="experienceBpdy">
+<div id="experienceBody">
     <h2>Experience</h2>
       <p><h3>Internship, The Hawk Newspaper. Saint Joseph’s University</h3>
       Editorial Board position as Copy Chief, December 2013 – present</p>
